--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcc 'BV'
 - !lcsh 'Christian life'
 - !lcsh 'Episcopal Church -- Sermons'
+- GITenberg
 title: Nine O'Clock Talks
 url: http://www.gutenberg.org/ebooks/45272
